--- a/package.json
+++ b/package.json
@@ -1,4 +1,29 @@
 {
   "name": "md-links",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "description": "## Preámbulo",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "jest --coverage"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/karina2004liz/GDL003-md-links.git"
+  },
+  "keywords": [
+    "md",
+    "links"
+  ],
+  "author": "Karina",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/karina2004liz/GDL003-md-links/issues"
+  },
+  "homepage": "https://github.com/karina2004liz/GDL003-md-links#readme",
+  "devDependencies": {
+    "jest": "^24.8.0"
+  }
 }
