--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "jest": "^24.8.0"
   },
   "dependencies": {
+    "marked": "^0.7.0",
     "net-ping": "^1.2.3",
-    "ping": "^0.2.2"
+    "node-fetch": "^2.6.0",
+    "ping": "^0.2.2",
+    "simple-get": "^3.0.3"
   }
 }
