--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "md-links",
-  "version": "0.1.0",
+  "name": "mdlinks-getmylinksplease",
+  "version": "0.1.3",
   "description": "## Preámbulo",
   "main": "index.js",
   "directories": {
@@ -19,8 +19,8 @@
   ],
   "author": "Karina",
   "license": "ISC",
-  "bin": {
-    "md-links": "index.js"
+  "bin":{
+    "mdlinks": "index.js"
   },
   "bugs": {
     "url": "https://github.com/karina2004liz/GDL003-md-links/issues"
